--- a/style.css
+++ b/style.css
@@ -454,7 +454,7 @@ body {
 	padding-right: 20px;
 }
 
-#iffs {
+#navcol2 {
 	flex: 0 1 auto;
 }
 
@@ -506,7 +506,7 @@ body {
 	color: rgba(129, 129, 129, 1);
 }
 
-#irtfd {
+#colnav {
 	flex: 0 1 auto;
 }
 
