--- a/style.css
+++ b/style.css
@@ -976,13 +976,14 @@ body {
 	border-top-right-radius: 15px;
 	border-bottom-left-radius: 15px;
 	border-bottom-right-radius: 15px;
-	background-image: url("assets/img_sekolah.gif");
-	background-position: 0px -50px;
+	background-image: url("assets/schulehoechi.jpg");
+	background-position: 0px 0px;
 	background-size: 1115.1px 394.8px;
 	background-repeat: repeat;
 	background-attachment: scroll;
 	background-origin: padding-box;
 	filter: unset;
+	display: none;
 }
 
 #navcol-2 {
@@ -1618,6 +1619,59 @@ body {
 	border-bottom-right-radius: 15px;
 	filter: unset;
 	display: flex;
+}
+
+#i85as3-2 {
+	font-size: 24pt;
+	font-family: 'trebuchet ms', geneva, sans-serif;
+}
+
+#ip7cyo-2 {
+	font-size: 14pt;
+}
+
+#il0alf-2 {
+	padding: 10px;
+	padding-left: 50px;
+	padding-right: 50px;
+}
+
+#i3mqhw-4-2 {
+	flex-basis: 100%;
+	min-height: 200px;
+	background-image: linear-gradient(rgba(0, 0, 0, 0.5) 1%, rgba(0, 0, 0, 0.5) 100%);
+	background-position: 0px 0px;
+	background-size: 100% 100%;
+	background-repeat: repeat;
+	background-attachment: scroll;
+	background-origin: padding-box;
+	border-top-left-radius: 15px;
+	border-top-right-radius: 15px;
+	border-bottom-left-radius: 15px;
+	border-bottom-right-radius: 15px;
+	filter: unset;
+	display: flex;
+}
+
+#iw7afe-4 {
+	width: 100%;
+	margin-bottom: 10px;
+	border-top-left-radius: 15px;
+	border-top-right-radius: 15px;
+	border-bottom-left-radius: 15px;
+	border-bottom-right-radius: 15px;
+	background-image: url("assets/img_sekolah.gif");
+	background-position: 0px -50px;
+	background-size: 1115.1px 394.8px;
+	background-repeat: repeat;
+	background-attachment: scroll;
+	background-origin: padding-box;
+	filter: unset;
+}
+
+#ifzbe4 {
+	font-family: 'trebuchet ms', geneva, sans-serif;
+	font-size: 24pt;
 }
 
 @media (max-width: 992px) {
