--- a/style.css
+++ b/style.css
@@ -696,7 +696,7 @@ body {
 	padding-right: 20px;
 }
 
-#i88iz-3 {
+#past-p-ref {
 	padding: 10px;
 	font-family: Arial, Helvetica, sans-serif;
 	padding-left: 20px;
