--- a/style.css
+++ b/style.css
@@ -1444,24 +1444,24 @@ body {
 ::-webkit-scrollbar {
 	width: 7px;
 	height: 7px;
-  }
-  
-  /* Track */
-  ::-webkit-scrollbar-track {
-	box-shadow: inset 0 0 5px grey; 
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+	box-shadow: inset 0 0 5px rgb(40, 40, 40);
 	border-radius: 10px;
-  }
-   
-  /* Handle */
-  ::-webkit-scrollbar-thumb {
-	background: rgb(0, 123, 255); 
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+	background: rgb(0, 123, 255);
 	border-radius: 10px;
-  }
-  
-  /* Handle on hover */
-  ::-webkit-scrollbar-thumb:hover {
-	background: rgb(2, 77, 157); 
-  }
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+	background: rgb(2, 77, 157);
+}
 
 @media (max-width:992px) {
 	.gjs-grid-row {
