--- a/l/light.css
+++ b/l/light.css
@@ -1581,6 +1581,8 @@ body {
     border-top-right-radius: 10px;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
+    height: 100%;
+    min-height: 100%;
 }
 
 #id7x-2 {
