--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-/* ========================================
+﻿/* ========================================
    CSS Variables
    ======================================== */
 :root {
@@ -34,9 +34,6 @@ body {
 /* ========================================
    Utility Classes
    ======================================== */
-.text-blue {
-  color: var(--primary-color);
-}
 
 .text-green {
   color: #2dc26b;
@@ -48,6 +45,10 @@ body {
 
 .text-red {
   color: #e03e2d;
+}
+
+.text-blue {
+  color: #2463eb;
 }
 
 .text-purple {
