--- a/style.css
+++ b/style.css
@@ -504,12 +504,12 @@ body {
   background-repeat: repeat;
   background-attachment: scroll;
   background-origin: padding-box;
-  padding-left: 3%;
+  padding-left: 20px;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
-  padding-right: 3%;
+  padding-right: 20px;
   margin-top: 5px;
   margin-right: 5px;
   margin-bottom: 5px;
@@ -597,12 +597,12 @@ body {
   background-repeat: repeat;
   background-attachment: scroll;
   background-origin: padding-box;
-  padding-left: 3%;
+  padding-left: 20px;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
-  padding-right: 3%;
+  padding-right: 20px;
   margin-top: 5px;
   margin-right: 5px;
   margin-bottom: 5px;
@@ -646,12 +646,12 @@ body {
   background-repeat: repeat;
   background-attachment: scroll;
   background-origin: padding-box;
-  padding-left: 3%;
+  padding-left: 20px;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
   border-bottom-left-radius: 10px;
   border-bottom-right-radius: 10px;
-  padding-right: 3%;
+  padding-right: 20px;
   margin-top: 5px;
   margin-right: 5px;
   margin-bottom: 5px;
